--- a/Core3Shop/Views/Shared/_Layout.cshtml
+++ b/Core3Shop/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="p-2">
             @RenderBody()
         </main>
     </div>
