--- a/Core3Shop/Areas/Admin/Views/Service/Upsert.cshtml
+++ b/Core3Shop/Areas/Admin/Views/Service/Upsert.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<form method="post" asp-action="Upsert" enctype="multipart/form-data">
+<form method="post" asp-action="Upsert" enctype="multipart/form-data" onsubmit="return validateFormInput();">
     <div class="row px-2 mx-2 backgroundWhite border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.Service.Id != 0)
@@ -83,4 +83,18 @@
         </div>
     </div>
 </form>
-
+@section Scripts{ 
+<script>
+    function validateFormInput() {
+        if ($("#uploadBox").val() === "") {
+            swal.fire({
+                title: "Error",
+                text: "Please, select an image",
+                type: "error"
+            });
+            return false;
+        }
+        return true;
+    }
+</script>
+}
