--- a/Core3Shop/Areas/Admin/Views/Service/Upsert.cshtml
+++ b/Core3Shop/Areas/Admin/Views/Service/Upsert.cshtml
@@ -58,6 +58,7 @@
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Service.FrequencyId, Model.FrequencyList, "Select frequency", new { @class = "form-control" })
+                    <span asp-validation-for="Service.FrequencyId" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -66,6 +67,7 @@
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Service.CategoryId, Model.CategoriesList, "Select category", new { @class = "form-control" })
+                    <span asp-validation-for="Service.CategoryId" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
