service controller enhancements

--- a/Core3Shop/Areas/Admin/Views/Service/Upsert.cshtml
+++ b/Core3Shop/Areas/Admin/Views/Service/Upsert.cshtml
@@ -41,7 +41,7 @@
                     <label asp-for="Service.Description"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="Service.Description" class="form-control" />
+                    <textarea asp-for="Service.Description" class="form-control" style="height:300px;"></textarea>
                     <span asp-validation-for="Service.Description" class="text-danger"></span>
                 </div>
             </div>
@@ -87,24 +87,34 @@
         @if (Model.Service.Id != 0)
         {
             <div class="col-3">
-                <img src="@Model.Service.ImageUrl" width="100%" class="p-1 border" id="imgBox"/>
+                <div class="border p-1 border-secondary">
+                    <img src="@Model.Service.ImageUrl" width="100%" id="imgBox" class="rounded" />
+                </div>
             </div>
         }
 
     </div>
 </form>
-@section Scripts{ 
-<script>
-    function validateFormInput() {
-        if ($("#uploadBox").val() === "" && !$("#imgBox").prop('src')) {
-            swal.fire({
-                title: "Error",
-                text: "Please, select an image",
-                type: "error"
-            });
-            return false;
+@section Scripts{
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'lists preview fullscreen',
+            menubar: 'file view edit format'
+        });
+    </script>
+    <script>
+        function validateFormInput() {
+            if ($("#uploadBox").val() === "" && !$("#imgBox").prop('src')) {
+                swal.fire({
+                    title: "Error",
+                    text: "Please, select an image",
+                    type: "error"
+                });
+                return false;
+            }
+            return true;
         }
-        return true;
-    }
-</script>
+    </script>
 }
