Add partial viev for ServiceCard

--- a/Core3Shop/Areas/Customer/Views/Home/Index.cshtml
+++ b/Core3Shop/Areas/Customer/Views/Home/Index.cshtml
@@ -7,20 +7,7 @@
             <div class="row">
                         @foreach(var service in Model.Services.Where(x=> x.CategoryId == category.Id).OrderBy(x=>x.Name))
                         {
-                            <div class="col-xl-3 col-lg-4 col-md-6 pb-4">
-                                <div class="card rounded-lg">
-                                    <div class="p-1 text-center">
-                                        <div class="card-title text-primary font-weight-bold h5">@service.Name</div>
-                                    </div>
-                                    <div class="d-flex justify-content-between p-1">
-                                        <div class="text-muted">Price per service</div>
-                                        <div class="text-warning">$@service.Price</div>
-                                    </div>
-                                    <img src="@service.ImageUrl" class="p-2 rounded-lg w-100"/>
-                                    <div class="text-muted text-center pb-2">@service.Frequency.Name</div>
-                                    <a asp-action="Details" class="btn btn-success rounded-lg" asp-route-id="@service.Id">Details</a>
-                                </div>
-                            </div>
+                            <partial name="_ServiceCard" model="service" />
                         }
             </div>
         </div>
