Details controller added

--- a/Core3Shop/Areas/Customer/Views/Home/Index.cshtml
+++ b/Core3Shop/Areas/Customer/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @foreach(var category in Model.Categories)
 {
     <div class="container pb-3 backgroundWhite">
-            <div class="text-success font-weight-bold h3">@category.Name</div>
+            <div class="text-success font-weight-bold h3">@category.Name</div><a href="#@category.Id"></a>
             <div class="row">
                         @foreach(var service in Model.Services.Where(x=> x.CategoryId == category.Id).OrderBy(x=>x.Name))
                         {
