--- a/Core3Shop/Areas/Customer/Views/Home/_ServiceCard.cshtml
+++ b/Core3Shop/Areas/Customer/Views/Home/_ServiceCard.cshtml
@@ -11,6 +11,6 @@
         </div>
         <img src="@Model.ImageUrl" class="p-2 rounded-lg w-100" />
         <div class="text-muted text-center pb-2">@Model.Frequency.Name</div>
-        <a asp-action="Details" class="btn btn-success rounded-lg" asp-route-id="@Model.Id">Details</a>
+        <a asp-action="Details" class="btn btn-success rounded-lg" asp-route-id="@Model.Id"><i class="fas fa-angle-double-right"></i> Details</a>
     </div>
 </div>
