--- a/Core3Shop/Views/Shared/_EditAndBackToListButtons.cshtml
+++ b/Core3Shop/Views/Shared/_EditAndBackToListButtons.cshtml
@@ -1,9 +1,9 @@
 ﻿@model  int
 <div class="row">
     <div class="col">
-        <button type="submit" class="btn btn-primary form-control" asp-route-id="@Model">Update</button>
+        <button type="submit" class="btn btn-primary form-control" asp-route-id="@Model"><i class="fas fa-pen"></i> Update</button>
     </div>
     <div class="col">
-        <a asp-action="Index" class="btn btn-success form-control">Back to the list</a>
+        <a asp-action="Index" class="btn btn-success form-control"><i class="fas fa-arrow-left"></i> Back to list</a>
     </div>
 </div>
