--- a/Core3Shop/Views/Shared/_CreateAndBackToListButtons.cshtml
+++ b/Core3Shop/Views/Shared/_CreateAndBackToListButtons.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="row">
     <div class="col">
-        <button type="submit" class="btn btn-primary form-control">Create</button>
+        <button type="submit" class="btn btn-primary form-control"><i class="fas fa-plus"></i> Create</button>
     </div>
     <div class="col">
-        <a asp-action="Index" class="btn btn-success form-control">Back to the list</a>
+        <a asp-action="Index" class="btn btn-success form-control"><i class="fas fa-arrow-left"></i> Back to list</a>
     </div>
 </div>
