--- a/Core3Shop/Views/Shared/_Layout.cshtml
+++ b/Core3Shop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@using Core3Shop.Managers
+@inject IHttpContextAccessor httpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -38,6 +41,18 @@
                             <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
                         </div>
                     </li>
+                    @{ 
+                        var session = new SessionManager(httpContextAccessor.HttpContext);
+                        var count = session.GetCart().Count;
+                    }
+                    @if( count > 0)
+                    {
+                        <li>
+                            <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
+                                <i class="fas fa-shopping-cart"></i> (@count)
+                            </a>
+                        </li>
+                    }
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
