--- a/Core3Shop/Areas/Customer/Views/Home/Details.cshtml
+++ b/Core3Shop/Areas/Customer/Views/Home/Details.cshtml
@@ -4,22 +4,22 @@
     <div class="card">
         <div class="card-header bg-light text-light row container m-0">
             <div class="col-12 col-md-6">
-                <h1 class="text-primary">@Model.Service.Name</h1>
+                <h1 class="text-primary">@Model.Service.ServiceModel.Name</h1>
             </div>
             <div class="col-12 col-md-6 text-md-right">
-                <h1 class="text-muted">Total: $@Model.TotalPrice</h1>
+                <h1 class="text-muted">Total: $@Model.Service.TotalPrice</h1>
             </div>
         </div>
         <div class="card-body">
             <div class="container rounded p-2">
                 <div class="row">
                     <div class="col-12 col-lg-8">
-                        <h3 class="text-success">Price per service: $@Model.Service.Price</h3>
-                        <h4 class="text-muted">@Model.Service.Frequency.Name</h4>
-                        <p class="text-secondary">@Html.Raw(Model.Service.Description)</p>
+                        <h3 class="text-success">Price per service: $@Model.Service.ServiceModel.Price</h3>
+                        <h4 class="text-muted">@Model.Service.ServiceModel.Frequency.Name</h4>
+                        <p class="text-secondary">@Html.Raw(Model.Service.ServiceModel.Description)</p>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <img class="w-100" src="@Model.Service.ImageUrl" />
+                        <img class="w-100" src="@Model.Service.ServiceModel.ImageUrl" />
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
         <div class="card-footer">
             <div class="row">
                 <div class="col-12 col-md-6 p-1">
-                    <a asp-action="Index" class="btn btn-success form-control btn-lg" asp-fragment="@Model.Service.CategoryId"><i class="fas fa-arrow-left"></i> Back to list</a>
+                    <a asp-action="Index" class="btn btn-success form-control btn-lg" asp-fragment="@Model.Service.ServiceModel.CategoryId"><i class="fas fa-arrow-left"></i> Back to list</a>
                 </div>
                 <div class="col-12 col-md-6 p-1">
                     @if (Model.IsInCart)
@@ -36,7 +36,7 @@
                     }
                     else
                     {
-                        <a asp-action="AddToCart" class="btn btn-primary form-control btn-lg" asp-route-serviceId="@Model.Service.Id"><i class="fas fa-shopping-cart"></i> Add to cart</a>
+                        <a asp-action="AddToCart" class="btn btn-primary form-control btn-lg" asp-route-serviceId="@Model.Service.ServiceModel.Id"><i class="fas fa-shopping-cart"></i> Add to cart</a>
                     }
                 </div>
             </div>
