Order processig added

--- a/Core3Shop/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Core3Shop/Areas/Customer/Views/Cart/Index.cshtml
@@ -50,7 +50,7 @@
                     }
                     else
                     {
-                        <a asp-area="Customer" asp-controller="Cart" asp-action="PlaceOrder" class="btn btn-success form-control">Place Order</a>
+                        <a asp-area="Customer" asp-controller="Cart" asp-action="PlaceOrder" class="btn btn-success form-control"><i class="fas fa-list"></i> Place Order</a>
                     }
 
                 </div>
