User management added

--- a/Core3Shop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Core3Shop/Areas/Identity/Pages/Account/Register.cshtml
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-5">
                     <input type="radio" name="rbRole" value="@Roles.Manager" checked /> @Roles.Manager
-                    <input type="radio" name="rbRole" value="@Roles.Admin" checked /> @Roles.Admin
+                    <input type="radio" name="rbRole" value="@Roles.Admin" /> @Roles.Admin
                 </div>
             </div>
             <div class="form-group row">
