--- a/Core3Shop/Areas/Admin/Views/User/Index.cshtml
+++ b/Core3Shop/Areas/Admin/Views/User/Index.cshtml
@@ -11,4 +11,48 @@
             </a>
         </div>
     </div>
+    <table class="table table-striped border">
+        <tr class="table-secondary">
+            <th>
+                @Html.DisplayNameFor(x => x.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(x => x.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(x => x.PhoneNumber)
+            </th>
+            <th>
+               
+            </th>
+        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(x => item.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(x => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(x => item.PhoneNumber)
+                </td>
+                <td>
+                    @if (item.LockoutEnd == null || item.LockoutEnd < DateTime.Now)
+                    {
+                        <a class="btn btn-success text-white" asp-action="Lock" asp-route-id="@item.Id">
+                            <i class="fas fa-lock-open"></i>
+                        </a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-danger text-white" asp-action="UnLock" asp-route-id="@item.Id">
+                            <i class="fas fa-lock"></i>
+                        </a>
+                    }
+                </td>
+            </tr>
+        }
+    </table>
 </div>
