Orders processing added

--- a/Core3Shop/Views/Shared/_Layout.cshtml
+++ b/Core3Shop/Views/Shared/_Layout.cshtml
@@ -36,10 +36,11 @@
                             Content Management
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropDown">
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequency</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequencies</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Services</a>
+                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
                         </div>
                     </li>
                     @{ 
