Application user management added

--- a/Core3Shop/Views/Shared/_Layout.cshtml
+++ b/Core3Shop/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Http
 @using Core3Shop.Managers
+@using Core3Shop.Utility.Consts
 @inject IHttpContextAccessor httpContextAccessor
 <!DOCTYPE html>
 <html lang="en">
@@ -31,23 +32,29 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Content Management
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropDown">
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequencies</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Services</a>
-                            <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
-                        </div>
-                    </li>
-                    @{ 
+                    @if (User.IsInRole(Roles.Admin) || User.IsInRole(Roles.Manager))
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Content Management
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropDown">
+                                <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                                <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
+                                <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequencies</a>
+                                <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Services</a>
+                                @if (User.IsInRole(Roles.Admin))
+                                {
+                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
+                                }
+                            </div>
+                        </li>
+                    }
+                    @{
                         var session = new SessionManager(httpContextAccessor.HttpContext);
                         var count = session.GetCart().Count;
                     }
-                    @if( count > 0)
+                    @if (count > 0)
                     {
                         <li>
                             <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
